<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7DADE"
    android:backgroundTint="#F7DADE"
    android:foregroundTint="#D0455C"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="217dp"
        android:layout_height="38dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077">

        <TextView
            android:id="@+id/CookieCounterShop"
            android:layout_width="131dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/carter_one"
            android:textAlignment="textEnd"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CookieTextShop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/carter_one"
            android:lineSpacingExtra="8sp"
            android:text="@string/Cookies"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="129dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/cpsShop"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/carter_one"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cpsTextShop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/carter_one"
            android:text="@string/cpsText"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/ShopView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/ShopButton"
        android:layout_width="411dp"
        android:layout_height="71dp"
        android:background="#D0455C"
        android:backgroundTint="#D0455C"
        android:drawableTint="#D0455C"
        android:fontFamily="@font/carter_one"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:shadowColor="#D0455C"
        android:text="@string/ShopButton"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHighlight="#D0455C"
        android:textColorHint="#D0455C"
        android:textColorLink="#D0455C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:iconTint="#D0455C"
        app:layout_constraintBottom_toBottomOf="@+id/ShopView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#D0455C"
        app:strokeColor="#D0455C" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="271dp"
        android:layout_height="270dp"
        app:layout_constraintBottom_toBottomOf="@+id/ShopView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ShopView"
        app:layout_constraintTop_toTopOf="@+id/ShopView"
        app:srcCompat="@drawable/unbenannt" />

</androidx.constraintlayout.widget.ConstraintLayout>